Upgraded pax exam to 4.12 (#672)